package com.example.demo.model;

public enum FlowType {
  IN_FLOW,
  OUT_FLOW
}
