@startuml

interface PaymentMethod {
   List<OutFlow> getAsociatedMoneyFlows(Bought bought)
}

class Bought {
   Category categoria
   Date date
   PaymentMethod paymentMethod
   Double amount
   User user

   List<MoneyFlow> generateAsociatedMoneyFlows()

}

class Category {
    String name
    String description
    User user
}

class MoneyFlow {
    Bought bought
    Date date
    Double amount
    FlowType flowType
    User user
}





class Credit {
    Integer installments
    Card card
    List<OutFlow> getAsociatedMoneyFlows(Bought bought)

}

interface Card {
  LocalDate getNextClosingDate(LocalDate date)
  LocalDate getNextExpirationDate(LocalDate date)
}

class Liquid {
    List<OutFlow> getAsociatedMoneyFlows(Bought bought)
}


class User {
    String email
    String password
    String name
    String surname

}

enum FlowType {
    IN_FLOW,
    OUT_FLOW
}

Credit -u-|> PaymentMethod
Liquid -u-|> PaymentMethod

Bought -u-> Category

Bought -u-> PaymentMethod

MoneyFlow -u-> Bought
Credit -d-> Card

MoneyFlow -l-> User
Bought -l-> User
Category -l-> User
MoneyFlow -r-> FlowType

HSBC -u-|> Card
BBVA -u-|> Card
GAL -u-|> Card

@enduml